--- a/en/cv_cschen.html
+++ b/en/cv_cschen.html
@@ -207,8 +207,6 @@ canvas {
       
       <div class="sectionContent">
         <article>
-          <li><p>Use knowledge from compiler books, llvm document/source code, CPU architecture books and Verilog, implement the llvm backend and Verilog CPU, Cpu0, to create a backend and write book as tutorial.</p></li>
-          <li><p>Study the llvm linker open source code, lld, and llvm run time library open source code, compiler-rt, and implement elf linker and software floating point library for Cpu0.</p></li>
           <li><p>The upper half of the following figure is the work flow and software package of a computer program be generated and executed. IR stands for Intermediate Representation. 
           The lower half is the llvm's work flow. The yellow and green parts are implemented in my books (listed as my open source project above), Tutorial: Create an LLVM Backend compiler and Tutorial: Create an LLVM Backend toolchain respectively.</p></li>
           <p style="margin-left:20px;"><img src="../images/mywork_1.png" width="100%" height="120"/></p>
@@ -233,7 +231,7 @@ canvas {
     <section>
       <div class="sectionTitle">
         <h1>CPU, COMPILER, OS, AND SOFTWARE ENGINEERING RELATED LEANING & APPLY</h1>
-        <p style="margin-left:20px;"><img src="../images/study_and_apply.png" width="90%" height="250"/></p>
+        <p style="margin-left:0px;"><img src="../images/study_and_apply.png" width="100%" height="290"/></p>
       </div>
       <div class="sectionTitle">
         <h1>CPU architecture study</h1>
@@ -243,8 +241,7 @@ canvas {
         <article>
           <li><p>Study books “Computer Organization and Design: The Hardware/Software Interface”, “Computer Architecture – A Quantitative Approach”, Mips and Broadcom CPU user manual and Verilog.</p></li>
           <li><p>Apply in work:</p></li>
-            <li><p style="margin-left:25px;">Find the bug of Code Warrior's compiler in supporting Mips cpu. The bug come from code generation for #pack(1) statement.</p></li>
-              <li><p style="margin-left:50px;">Email Code Warrior the bug along with the example code I write for identifing this bug, and they admit that is a bug from their compiler for mips backend support.</p></li>
+            <li><p style="margin-left:25px;">Find the bug of Code Warrior's compiler in supporting Mips cpu and notify Code Warrior. The bug come from code generation for #pack(1) statement.</p></li>
             <li><p style="margin-left:25px;">Implement the "tiny OS" mechanism with mips assembly language to solve the halting problem in some program.</p></li>
               <li><p style="margin-left:50px;">After this implementation, the code has run more stable and fast. It is a serious problem since when one test item "halting", the other test items scheduled after that one won’t be run. 
               In this situation, operator has no idea of the test result since test result is displayed after all test items finish execution. I implement a "time out" mechanism to jump out from the test item (by restore the stack and cpu registers status). 
