--- a/ch1/cv_cschen.html
+++ b/ch1/cv_cschen.html
@@ -156,7 +156,8 @@ canvas {
       
       <div class="sectionContent">
         <p> 修影像處理課程與撰寫:<a href="https://github.com/Jonathan2251/ow/tree/master/master-homework/image_processing/JPEG">Jpeg decoder程式</a>  </p>
-        <p> 網頁與javascript:<a href="resume_cschen.html"> html簡歷</a> 與 <a href="index.html">我個人網頁</a></p>
+        <p> 網頁與javascript:<a href="https://jonathan2251.github.io/ws/ch1/resume_cschen.html"> html簡歷</a> 與 <a href="https://jonathan2251.github.io/ws/ch1/index.html">我個人網頁</a></p>
+        <p> <a href="http://www.graphviz.org/Home.php">Graphivz:</a> 如此詳細履歷裡的一些圖學的圖。原始碼： <a href="https://jonathan2251.github.io/ws/images/mywork_1.gv"> mywork_1.gv </a> and <a href="https://jonathan2251.github.io/ws/images/study_and_apply.gv"> study_and_apply_ch1.gv</a></p>
       </div>
       <div class="clear"></div>
     </section>
