--- a/en/resume_cschen.html
+++ b/en/resume_cschen.html
@@ -135,6 +135,7 @@ canvas {
       </div>
       
       <div class="sectionContent">
+        <!-- Don't use ../../ow/tree/master/sortingnetwork/ThesisMaster since pdf is not work for the relative path -->
         <p><a href="https://github.com/Jonathan2251/ow/tree/master/sortingnetwork/ThesisMaster"><img style="vertical-align: middle;" src="../images/user_phd.png" title="The Researches of Column Sort and Related Problems" width="16" height="16" /> The Researches of Column Sort and Related Problems</a></p>
       </div>
       <div class="clear"></div>
