--- a/ch1/cv_cschen.html
+++ b/ch1/cv_cschen.html
@@ -173,22 +173,22 @@ canvas {
       <div class="sectionContent">
         <article>
           <li><p>設計半自動的軟體系統，自動執行用gcc編譯器編譯benchmark程式，並產生excel比較圖表。</p></li>
-            <li><p style="margin-left:25px;">設計bash scrip每天固定時間此程式會偵測公司的gcc編譯工具原始碼是否有修改，如有修改，則比較舊版的gcc與新改的gcc，目的是確保新改的gcc沒有邊際效應(side effect)。
+            <li style="margin-left:25px;"><p>設計bash scrip每天固定時間此程式會偵測公司的gcc編譯工具原始碼是否有修改，如有修改，則比較舊版的gcc與新改的gcc，目的是確保新改的gcc沒有邊際效應(side effect)。
             </p></li>
-            <li><p style="margin-left:25px;">設計bash scrip比較任兩版的gcc編譯器的benchmark效能。
+            <li style="margin-left:25px;"><p>設計bash scrip比較任兩版的gcc編譯器的benchmark效能。
             </p></li>
           <li><p>為提升Marvell公司gcc與llvm編譯器軟體工具效能，介紹Polly軟體系統。Polly是針對loop最佳化的開放原始碼專案。</p></li>
-            <li><p style="margin-left:25px;">此系統的好處是針對某些數值應用程式，像是矩陣相乘、各類矩陣運算的程式，他能提升五倍的速度，遺憾的是Marvell的處理器並沒有數值運算領域的運用，但也許未來的64位元的處理器會有機會。</p></li>
+            <li style="margin-left:25px;"><p>此系統的好處是針對某些數值應用程式，像是矩陣相乘、各類矩陣運算的程式，他能提升五倍的速度，遺憾的是Marvell的處理器並沒有數值運算領域的運用，但也許未來的64位元的處理器會有機會。</p></li>
             <p style="margin-left:40px;"><img src="../images/polly_benchmark.png" width="600" height="150"/></p>
           <li><p>提出解決方案利用編譯器產生程式碼，此想法獲得Csim小組採用。 <a href="http://jonathan2251.github.io/ws/en/RL_Marvell.pdf"> 推薦函</a></p></li>
           <li><p>完成cmake以及調整python程式，使Csim軟體系統可採用一套cmake而不必維護make與windows專案檔兩套專案檔，同時也支援蘋果電腦的使用者。 <a href="http://jonathan2251.github.io/ws/en/RL_Marvell.pdf"> 推薦函</a></p></li>
-            <li><p style="margin-left:25px;">介紹可改進cmake的程式寫法。</p></li>
-              <li><p style="margin-left:50px;">安裝於公司伺服器的cmake版本是2.6.x，儘管如此，cmake 2.8.8提供shared object支援以節省不必要的編譯時間。</p></li>
+            <li style="margin-left:25px;"><p>介紹可改進cmake的程式寫法。</p></li>
+              <li style="margin-left:50px;"><p>安裝於公司伺服器的cmake版本是2.6.x，儘管如此，cmake 2.8.8提供shared object支援以節省不必要的編譯時間。</p></li>
               <div id="container" style="width: 100%;">
                 <canvas id="canvas3" height="50"></canvas>
               </div>
               <script> drawCmakeSharedObjectBarChart(); </script>
-            <li><p style="margin-left:25px;">cmake與ninja兩種編譯時效評估報告。</p></li>
+            <li style="margin-left:25px;"><p>cmake與ninja兩種編譯時效評估報告。</p></li>
         </article>
       </div>
       <div class="clear"></div>
@@ -201,7 +201,7 @@ canvas {
         <article>
           <li><p>下圖的上半部是計算機產生與執程式的流程圖。IR是中間碼的縮寫（Intermediate Representation）。
           下半部是llvm的流程圖。黃色與綠色分別是我書中（如上，我的開法原始碼專案），如何建立LLVM後端編譯器與如何建立LLVM後端系統工具中的作品。</p></li>
-          <p style="margin-left:20px;"><img src="../images/mywork_1.png" width="100%" height="120"/></p>
+          <p><img src="../images/mywork_1.png" width="100%" height="120"/></p>
         </article>
       </div>
       <div class="clear"></div>
@@ -233,12 +233,12 @@ canvas {
         <article>
           <li><p>研讀書籍“計算機組織與設計：軟硬體介面”，“計算機結構 – 量的研究”與Mips與Broadcom處理器使用手冊。還有Verilog語言與工具研究。</p></li>
           <li><p>工作應用：</p></li>
-            <li><p style="margin-left:25px;">找出Code Warrior編譯器支援Mips處理器中的錯誤並告知Code Warrior。此錯誤來自preprocess #pack(1)的程式碼生成。</p></li>
-            <li><p style="margin-left:25px;">使用mips組合語言製作"微作業系統"機制，以解決程式掛住、無法運行的問題。</p></li>
-              <li><p style="margin-left:50px;">此後系統變得更加穩定且快速。當一測試項目死當時，其他測試項目皆無法繼續執行，此情況是一嚴重問題，因為測試結果是在全部測試項目完成後，才能顯示，
+            <li style="margin-left:25px;"><p>找出Code Warrior編譯器支援Mips處理器中的錯誤並告知Code Warrior。此錯誤來自preprocess #pack(1)的程式碼生成。</p></li>
+            <li style="margin-left:25px;"><p>使用mips組合語言製作"微作業系統"機制，以解決程式掛住、無法運行的問題。</p></li>
+              <li style="margin-left:50px;"><p>此後系統變得更加穩定且快速。當一測試項目死當時，其他測試項目皆無法繼續執行，此情況是一嚴重問題，因為測試結果是在全部測試項目完成後，才能顯示，
               遇此狀況，作業員無法得知測試結果。我製作一個time out機制，讓死當的測試項目得以被略過(藉由從預存的堆疊指標與暫存器還原其值)，美國同事稱它為微作業系統，
               使用c++加上幾百行的mips組合語言的"observe pattern")。</p></li>
-            <li><p style="margin-left:25px;">運用Verilog與書籍“計算機結構 – 量的研究”所學，修改Cpu0 Verilog程式碼使其更符合llvm後端編譯器支援的實際處理器設計。</p></li>
+            <li style="margin-left:25px;"><p>運用Verilog與書籍“計算機結構 – 量的研究”所學，修改Cpu0 Verilog程式碼使其更符合llvm後端編譯器支援的實際處理器設計。</p></li>
         </article>
       </div>
       <div class="clear"></div>
@@ -251,8 +251,8 @@ canvas {
         <article>
           <li><p>研究llvm前端與後端設計，研讀書籍“編譯系統設計 Compilers – Principles, Techniques, & tools 2nd Aho,...”, yacc與lex工具。</p></li>
           <li><p>工作應用：</p></li>
-            <li><p style="margin-left:25px;">為教學與自我學習，設計Cpu0 llvm後端編譯器（列在此履歷前面“我的開法原始碼專案”）。</p></li>
-            <li><p style="margin-left:25px;">運用編譯器語法分析工具yacc與lex，設計自動化測試站。</p></li>
+            <li style="margin-left:25px;"><p>為教學與自我學習，設計Cpu0 llvm後端編譯器（列在此履歷前面“我的開法原始碼專案”）。</p></li>
+            <li style="margin-left:25px;"><p>運用編譯器語法分析工具yacc與lex，設計自動化測試站。</p></li>
         </article>
       </div>
 
@@ -264,8 +264,8 @@ canvas {
         <article>
           <li><p>研讀書籍“Linux驅動程式 Linux Device Driver (2nd & 3rd edition)”</p></li>
           <li><p>工作應用：</p></li>
-            <li><p style="margin-left:25px;">如上，“計算機架構學習與應用”所列，我參考作業系統並使用mips組合語言來設計"微作業系統"機制，以解決程式死當無法運行的問題。</p></li>
-            <li><p style="margin-left:25px;">在Motorola時，撰寫I/O轉向機制，讓新版的程式更容易移植。</p></li>
+            <li style="margin-left:25px;"><p>如上，“計算機架構學習與應用”所列，我參考作業系統並使用mips組合語言來設計"微作業系統"機制，以解決程式死當無法運行的問題。</p></li>
+            <li style="margin-left:25px;"><p>在Motorola時，撰寫I/O轉向機制，讓新版的程式更容易移植。</p></li>
         </article>
       </div>
       <div class="clear"></div>
@@ -278,9 +278,9 @@ canvas {
         <article>
           <li><p>研讀書籍“Design Patterns”與"物件導向分析書籍與工具(Rational Rose, ...)"</p></li>
           <li><p>工作應用：</p></li>
-            <li><p style="margin-left:25px;">在Motorola時，依主管要求，與其他四位成員建立產線測試程式共用架構。</p></li>
-              <li><p style="margin-left:50px;">使用Rational Ross工具設計此架構。我應用物件導向分析、設計以及UML工具，從事此任務。</p></li>
-              <li><p style="margin-left:50px;">使用書籍“Design Patterns”中的五種patterns以及Rational Ross工具建立程式共用架構、文件，並產生程式碼。</p></li>
+            <li style="margin-left:25px;"><p>在Motorola時，依主管要求，與其他四位成員建立產線測試程式共用架構。</p></li>
+              <li style="margin-left:50px;"><p>使用Rational Ross工具設計此架構。我應用物件導向分析、設計以及UML工具，從事此任務。</p></li>
+              <li style="margin-left:50px;"><p>使用書籍“Design Patterns”中的五種patterns以及Rational Ross工具建立程式共用架構、文件，並產生程式碼。</p></li>
         </article>
       </div>
       <div class="clear"></div>
