--- a/en/cv_cschen.html
+++ b/en/cv_cschen.html
@@ -7,7 +7,7 @@
 <meta name="description" content="Chung-Shu Chen - CV (detail resume)"/>
 <meta charset="UTF-8"> 
 
-<link type="text/css" rel="stylesheet" href="../css/resume.css">
+<link type="text/css" rel="stylesheet" href="https://jonathan2251.github.io/ws/css/resume.css">
 <link href='http://fonts.googleapis.com/css?family=Rokkitt:400,700|Lato:400,300' rel='stylesheet' type='text/css'>
 
 <script src="../js/Chart.bundle.js"></script>
@@ -174,14 +174,14 @@ canvas {
       <div class="sectionContent">
         <article>
           <li><p>Implement semi-auto software system of running benchmark and generating report for gcc toolchain.</p></li>
-            <li><p style="margin-left:25px;">Implemented bash script and run it automatically to generate Excel's format comparison report 
+            <li style="margin-left:25px;"><p>Implemented bash script and run it automatically to generate Excel's format comparison report 
               when the source code of Marvell's gcc toolchain has updated. The purpose is to make sure the new gcc has no side effect 
               (the gcc programmer may update code which brings bad effect on some benchmark). 
             </p></li>
-            <li><p style="margin-left:25px;">Implemented bash script which can compare any two version of gcc toolchain and generate report. 
+            <li style="margin-left:25px;"><p>Implemented bash script which can compare any two version of gcc toolchain and generate report. 
             </p></li>
           <li><p>Introduce polly for Marvell llvm toolchain optimization. Polly is a software for loop optimization.</p></li>
-            <li><p style="margin-left:25px;">The advantage is that it might be 500% speed up in some numerical
+            <li style="margin-left:25px;"><p>The advantage is that it might be 500% speed up in some numerical
               application program, such as matrix multiplication, or other kind of matrix operation. 
               Sadly, Marvell's CPUs are not used in numerical applications. But maybe it will have for 64 bits ARM in future.
             </p></li>
@@ -189,13 +189,13 @@ canvas {
           <li><p>Implement co-simulator(our name:Csim) for a few Marvell's ARM based cpu.</p></li>
           <li><p>Apply compiler code generation idea to propose a solution and Csim team adopted it. <a href="http://jonathan2251.github.io/ws/en/RL_Marvell.pdf"> reference</a></p></li>
           <li><p>Complete cmake and adjust python programs to build Csim with cmake. It saves effort in maintaining both make and windows project file. In addition, cmake also support iMac user. <a href="http://jonathan2251.github.io/ws/en/RL_Marvell.pdf"> reference</a></p></li>
-            <li><p style="margin-left:25px;">Present the better option for cmake writting.</p></li>
-              <li><p style="margin-left:50px;">The version of cmake in Csim server is 2.6.x, however, the cmake 2.8.8 provides shared object to save the unnecessary compilation.</p></li>
+            <li style="margin-left:25px;"><p>Present the better option for cmake writting.</p></li>
+              <li style="margin-left:50px;"><p>The version of cmake in Csim server is 2.6.x, however, the cmake 2.8.8 provides shared object to save the unnecessary compilation.</p></li>
               <div id="container" style="width: 100%;">
                 <canvas id="canvas3" height="50"></canvas>
               </div>
               <script> drawCmakeSharedObjectBarChart(); </script>
-            <li><p style="margin-left:25px;">Report performance comparing between cmake and ninja for other manager's concern. The result is "no difference"</p></li>
+            <li style="margin-left:25px;"><p>Report performance comparing between cmake and ninja for other manager's concern. The result is "no difference"</p></li>
         </article>
       </div>
 
@@ -209,7 +209,7 @@ canvas {
         <article>
           <li><p>The upper half of the following figure is the work flow and software package of a computer program be generated and executed. IR stands for Intermediate Representation. 
           The lower half is the llvm's work flow. The yellow and green parts are implemented in my books (listed as my open source project above), Tutorial: Create an LLVM Backend compiler and Tutorial: Create an LLVM Backend toolchain respectively.</p></li>
-          <p style="margin-left:20px;"><img src="../images/mywork_1.png" width="100%" height="120"/></p>
+          <p><img src="../images/mywork_1.png" width="100%" height="120"/></p>
         </article>
       </div>
       <div class="clear"></div>
@@ -241,12 +241,12 @@ canvas {
         <article>
           <li><p>Study books “Computer Organization and Design: The Hardware/Software Interface”, “Computer Architecture – A Quantitative Approach”, Mips and Broadcom CPU user manual and Verilog.</p></li>
           <li><p>Apply in work:</p></li>
-            <li><p style="margin-left:25px;">Find the bug of Code Warrior's compiler in supporting Mips cpu and notify Code Warrior. The bug come from code generation for #pack(1) statement.</p></li>
-            <li><p style="margin-left:25px;">Implement the "tiny OS" mechanism with mips assembly language to solve the halting problem in some program.</p></li>
-              <li><p style="margin-left:50px;">After this implementation, the code has run more stable and fast. It is a serious problem since when one test item "halting", the other test items scheduled after that one won’t be run. 
+            <li style="margin-left:25px;"><p>Find the bug of Code Warrior's compiler in supporting Mips cpu and notify Code Warrior. The bug come from code generation for #pack(1) statement.</p></li>
+            <li style="margin-left:25px;"><p>Implement the "tiny OS" mechanism with mips assembly language to solve the halting problem in some program.</p></li>
+              <li style="margin-left:50px;"><p>After this implementation, the code has run more stable and fast. It is a serious problem since when one test item "halting", the other test items scheduled after that one won’t be run. 
               In this situation, operator has no idea of the test result since test result is displayed after all test items finish execution. I implement a "time out" mechanism to jump out from the test item (by restore the stack and cpu registers status). 
               My USA's coworker call it "tiny OS". It's c++ plus few hundred lines of mips assembly with "observe pattern" of "design pattern".</p></li>
-            <li><p style="margin-left:25px;">Apply knowledge from Verilog and book “Computer Architecture” to change the Verilog code of Cpu0 to become a cpu design for my llvm backend compiler support.</p></li>
+            <li style="margin-left:25px;"><p>Apply knowledge from Verilog and book “Computer Architecture” to change the Verilog code of Cpu0 to become a cpu design for my llvm backend compiler support.</p></li>
         </article>
       </div>
       <div class="clear"></div>
@@ -259,8 +259,8 @@ canvas {
         <article>
           <li><p>Study llvm frontend & backend design. Study book “Compilers – Principles, Techniques, & tools 2nd Aho,...”, yacc and lex tool.</p></li>
           <li><p>Apply in work:</p></li>
-            <li><p style="margin-left:25px;">Implement the Cpu0 llvm compiler backend from scratch for tutorial purpose, and writing books as in my publish books.</p></li>
-            <li><p style="margin-left:25px;">Apply the compiler syntax parsing tool, yacc & lex, in test station design.</p></li>
+            <li style="margin-left:25px;"><p>Implement the Cpu0 llvm compiler backend from scratch for tutorial purpose, and writing books as in my publish books.</p></li>
+            <li style="margin-left:25px;"><p>Apply the compiler syntax parsing tool, yacc & lex, in test station design.</p></li>
         </article>
       </div>
 
@@ -272,8 +272,8 @@ canvas {
         <article>
           <li><p>Study book “Linux Device Driver (2nd & 3rd edition)”</p></li>
           <li><p>Apply in work:</p></li>
-            <li><p style="margin-left:25px;">Implement the "tiny OS" mechanism as mentioned in above section "CPU architecture study".</p></li>
-            <li><p style="margin-left:25px;">Implement the I/O redirection mechanism to make the new version of code porting task easier in Motorola.</p></li>
+            <li style="margin-left:25px;"><p>Implement the "tiny OS" mechanism as mentioned in above section "CPU architecture study".</p></li>
+            <li style="margin-left:25px;"><p>Implement the I/O redirection mechanism to make the new version of code porting task easier in Motorola.</p></li>
         </article>
       </div>
       <div class="clear"></div>
@@ -286,8 +286,8 @@ canvas {
         <article>
           <li><p>Study book “Design Patterns” and "OOA Analysis related books and tools (Rational Rose, ...)"</p></li>
           <li><p>Apply in work:</p></li>
-            <li><p style="margin-left:25px;">During working the Board Level Test Code framework project in Motorola as mentioned above:</p></li>
-              <li><p style="margin-left:50px;">Utilize five patterns in "design pattern" and Rational Ross tool to create framework, document and generate code in Motorola.</p></li>
+            <li style="margin-left:25px;"><p>During working the Board Level Test Code framework project in Motorola as mentioned above:</p></li>
+              <li style="margin-left:50px;"><p>Utilize five patterns in "design pattern" and Rational Ross tool to create framework, document and generate code in Motorola.</p></li>
         </article>
       </div>
       <div class="clear"></div>
