refer ../css/resume.css

--- a/en/cv_cschen.html
+++ b/en/cv_cschen.html
@@ -7,7 +7,7 @@
 <meta name="description" content="Chung-Shu Chen - CV (detail resume)"/>
 <meta charset="UTF-8"> 
 
-<link type="text/css" rel="stylesheet" href="https://jonathan2251.github.io/ws/css/resume.css">
+<link type="text/css" rel="stylesheet" href="../css/resume.css">
 <link href='http://fonts.googleapis.com/css?family=Rokkitt:400,700|Lato:400,300' rel='stylesheet' type='text/css'>
 
 <script src="../js/Chart.bundle.js"></script>
