--- a/en/cv_cschen.html
+++ b/en/cv_cschen.html
@@ -173,12 +173,10 @@ canvas {
       
       <div class="sectionContent">
         <article>
-          <li><p>Implement semi-auto software system of running benchmark and generating report for gcc toolchain.</p></li>
-            <li style="margin-left:25px;"><p>Implemented bash script and run it automatically to generate Excel's format comparison report 
-              when the source code of Marvell's gcc toolchain has updated. The purpose is to make sure the new gcc has no side effect 
-              (the gcc programmer may update code which brings bad effect on some benchmark). 
-            </p></li>
-            <li style="margin-left:25px;"><p>Implemented bash script which can compare any two version of gcc toolchain and generate report. 
+          <li><p>Implement semi-auto software system of running benchmark and generating report for gcc toolchain. </p></li>
+            <li style="margin-left:25px;"><p>Purpose is to make sure the code change of gcc has no side effect in optimization
+              <a href="https://jonathan2251.github.io/ws/images/gcc-change-control.pdf"> (expain in flow chart)</a>.
+            <li style="margin-left:25px;"><p>Implemented bash script which can compare any two version of gcc toolchain and generate report. Similar as above.
             </p></li>
           <li><p>Introduce polly for Marvell llvm toolchain optimization. Polly is a software for loop optimization.</p></li>
             <li style="margin-left:25px;"><p>The advantage is that it might be 500% speed up in some numerical
