add section More detail resume

--- a/ch1/resume_cschen.html
+++ b/ch1/resume_cschen.html
@@ -148,6 +148,13 @@ canvas {
       </div>
       <div class="clear"></div>
     </section>
+    
+    <section>
+      <div class="sectionTitle">
+        <a href="https://jonathan2251.github.io/ws/ch1/cv_cschen.html"> 更詳細的履歷</a>
+      </div>
+      <div class="clear"></div>
+    </section>
 
     <section>
       <div class="sectionTitle">
