--- a/en/resume_cschen.html
+++ b/en/resume_cschen.html
@@ -151,6 +151,13 @@ canvas {
       </div>
       <div class="clear"></div>
     </section>
+    
+    <section>
+      <div class="sectionTitle">
+        <a href="https://jonathan2251.github.io/ws/en/cv_cschen.html"> More detailed resume</a>
+      </div>
+      <div class="clear"></div>
+    </section>
 
     <section>
       <div class="sectionTitle">
