--- a/ch1/cv_cschen.html
+++ b/ch1/cv_cschen.html
@@ -28,11 +28,11 @@ canvas {
 <body id="top">
 <div id="cv">
   <div class="mainDetails">
-    <div id="headshot" class="quickFade delayOne">
+    <div id="headshot">
       <img src="../images/headshot.png" alt="Alan Smith" />
     </div>
     
-    <div id="contactDetails" class="quickFade delayOne">
+    <div id="contactDetails">
       <ul>
         <p>陳鍾樞 &nbsp;&nbsp;&nbsp;&nbsp; (03)6681193, &nbsp;&nbsp;&nbsp;&nbsp; 0970577923 &nbsp;&nbsp;&nbsp;&nbsp; <a href="mailto:gamma_chen@yahoo.com.tw" target="_blank"> gamma_chen@yahoo.com.tw</a><br></p>
         <p>我是位有軟體工程師，過去在工作中使用不同軟體語言、工具，來開發軟硬體產品，諸如：數位電視機上盒、處理器，編譯器，模擬軟體 simulator，...，。 
