--- a/en/cv_cschen.html
+++ b/en/cv_cschen.html
@@ -27,12 +27,12 @@ canvas {
 </head>
 <body id="top">
 <div id="cv">
-  <div class="mainDetails" class="quickFade delayOne">
+  <div class="mainDetails">
     <div id="headshot">
       <img src="../images/headshot.png" alt="Alan Smith" />
     </div>
     
-    <div id="contactDetails" class="quickFade delayOne">
+    <div id="contactDetails">
       <ul>
         <p>Chung-Shu Chen 陳鍾樞 (03)6681193, 0970577923 <a href="mailto:gamma_chen@yahoo.com.tw" target="_blank"> gamma_chen@yahoo.com.tw</a><br></p>
         <p>I am a programmer who used different computer languages, tools and computer related knowledge to develop 
