--- a/ch1/cv_cschen.html
+++ b/ch1/cv_cschen.html
@@ -34,8 +34,8 @@ canvas {
     
     <div id="contactDetails">
       <ul>
-        <p>陳鍾樞 &nbsp;&nbsp;&nbsp;&nbsp; (03)6681193, &nbsp;&nbsp;&nbsp;&nbsp; 0970577923 &nbsp;&nbsp;&nbsp;&nbsp; <a href="mailto:gamma_chen@yahoo.com.tw" target="_blank"> gamma_chen@yahoo.com.tw</a><br></p>
-        <p>我是位有軟體工程師，過去在工作中使用不同軟體語言、工具，來開發軟硬體產品，諸如：數位電視機上盒、處理器，編譯器，模擬軟體 simulator，...，。 
+        <p>陳鍾樞<br></p>
+        <p>我是位有經驗的軟體工程師，過去在工作中使用不同軟體語言、工具，來開發軟硬體產品，諸如：數位電視機上盒、處理器，編譯器，模擬軟體 simulator，...，。 
         對寫程式總是懷抱熱情，暸解工具與軟體工程方法，喜愛思考程式與除錯，並對撰寫文件以產生較有可讀性及可維護性的軟體感到快樂。</p>
       </ul>
     </div>
