--- a/en/resume_cschen.html
+++ b/en/resume_cschen.html
@@ -34,11 +34,11 @@ canvas {
     
     <div id="contactDetails">
       <ul>
-        <p>Chung-Shu Chen 陳鍾樞 (03)6681193, 0970577923 <a href="mailto:gamma_chen@yahoo.com.tw" target="_blank"> gamma_chen@yahoo.com.tw</a><br></p>
+        <p>Chung-Shu Chen 陳鍾樞<br></p>
         <p>I am a programmer who used different computer languages, tools and computer related knowledge to develop 
         different software and hardware products, such as Set Top Box, CPU, compiler, simulator, ..., in my career. 
         I always have full passion in programming, knowing tools and software engineering method well, loving programming 
-        and debugging, and feel happy about writing good document to deliver more readable and maintainable software.</p>
+        and debugging, feeling happy about writing good document to deliver more readable and maintainable software.</p>
       </ul>
     </div>
     <div class="clear"></div>
