--- a/en/cv_cschen.html
+++ b/en/cv_cschen.html
@@ -168,6 +168,19 @@ canvas {
         <h1>ACHIEVEMENT</h1>
       </div>
       <div class="sectionTitle">
+        <h1>Hisilcon</h1>
+      </div>
+      
+      <div class="sectionContent">
+        <article>
+          <li><p>Implement compiler (fontend + llvm backend) for 80% of texture related API and optimization by myself, and something else. </p></li>
+          </p></li>
+        </article>
+      </div>
+
+      <div class="clear"></div>
+
+      <div class="sectionTitle">
         <h1>Marvell</h1>
       </div>
       
