--- a/en/cv_cschen.html
+++ b/en/cv_cschen.html
@@ -36,9 +36,9 @@ canvas {
       <ul>
         <p>Chung-Shu Chen 陳鍾樞<br></p>
         <p>I am a programmer who used different computer languages, tools and computer related knowledge to develop 
-        different software and hardware products, such as Set Top Box, CPU, compiler, simulator, ..., in my career. 
-        I always have full passion in programming, knowing tools and software engineering method well, loving programming 
-        and debugging, feeling happy about writing good document to deliver more readable and maintainable software.</p>
+        different software and hardware products, such as CPU, compiler, simulator, ..., in my career. 
+        I have passion in programming and debugging, knowing tools and software engineering method well, feeling happy 
+        about writing good document to deliver more readable and maintainable software.</p>
       </ul>
     </div>
     <div class="clear"></div>
