--- a/en/resume_cschen.html
+++ b/en/resume_cschen.html
@@ -36,9 +36,9 @@ canvas {
       <ul>
         <p>Chung-Shu Chen 陳鍾樞<br></p>
         <p>I am a programmer who used different computer languages, tools and computer related knowledge to develop 
-        different software and hardware products, such as Set Top Box, CPU, compiler, simulator, ..., in my career. 
-        I always have full passion in programming, knowing tools and software engineering method well, loving programming 
-        and debugging, feeling happy about writing good document to deliver more readable and maintainable software.</p>
+        different software and hardware products, such as CPU, compiler, simulator, ..., in my career. 
+        I have passion in programming and debugging, knowing tools and software engineering method well, feeling happy 
+        about writing good document to deliver more readable and maintainable software.</p>
       </ul>
     </div>
     <div class="clear"></div>
@@ -55,7 +55,7 @@ canvas {
         </div>
         
         <div class="sectionContent">
-          <p>Over 20 years experience in c/c++ embedded system programming, 5 years compiler toolchain related experience and research in parallel processing for master degree.</p>
+          <p>Over 20 years experience in c/c++ programming, 7 years compiler toolchain related experience and research in parallel processing for master degree.</p>
         </div>
       </article>
       <div class="clear"></div>
@@ -65,7 +65,7 @@ canvas {
     <section>
       <div class="sectionContent">
         <div id="container" style="width: 100%;">
-          <canvas id="canvas" height="100"></canvas>
+          <canvas id="canvas" height="90"></canvas>
         </div>
         <script> drawSkillBarChart(); </script>
       </div>
