--- a/ch1/cv_cschen.html
+++ b/ch1/cv_cschen.html
@@ -200,7 +200,7 @@ canvas {
             </p>
           <script> setHint(); </script>
 
-          <li><p>完成cmake以及調整python程式，使Csim軟體系統可採用一套cmake而不必維護make與windows專案檔兩套專案檔，同時也支援蘋果電腦的使用者。 <a href="http://jonathan2251.github.io/ws/en/RL_Marvell.pdf"> 推薦函</a></p></li>
+          <li><p>完成cmake以及調整python程式，使Csim軟體系統可採用一套cmake而不必維護make與windows專案檔兩套專案檔，同時也支援蘋果電腦的使用者。</a></p></li>
             <li style="margin-left:25px;"><p>介紹可改進cmake的程式寫法。</p></li>
               <li style="margin-left:50px;"><p>安裝於公司伺服器的cmake版本是2.6.x，儘管如此，cmake 2.8.8提供shared object支援以節省不必要的編譯時間。</p></li>
               <div id="container" style="width: 100%;">
