--- a/en/cv_cschen.html
+++ b/en/cv_cschen.html
@@ -216,7 +216,7 @@ canvas {
               <a style="font-size: 10px;"> Mouse hover the above </a> <a style="font-size: 10px;" href="https://jonathan2251.github.io/ws/en/cv_cschen.html"> (in html) </a>  <a style="font-size: 10px;"> for explanation, obviously the script is simple, match ARM spec and easy to read more then the c++ program. </a>
             </p>
           <script> setHint(); </script>
-          <li><p>Complete cmake and adjust python programs to build Csim with cmake. It saves effort in maintaining both make and windows project file. In addition, cmake also support iMac user. <a href="http://jonathan2251.github.io/ws/en/RL_Marvell.pdf"> reference</a></p></li>
+          <li><p>Complete cmake and adjust python programs to build Csim with cmake. It saves effort in maintaining both make and windows project file. In addition, cmake also support iMac user.</p></li>
             <li style="margin-left:25px;"><p>Present the better option for cmake writting.</p></li>
               <li style="margin-left:50px;"><p>The version of cmake in Csim server is 2.6.x, however, the cmake 2.8.8 provides shared object to save the unnecessary compilation.</p></li>
               <div id="container" style="width: 100%;">
