--- a/en/cv_cschen.html
+++ b/en/cv_cschen.html
@@ -204,7 +204,7 @@ canvas {
             </p></li>
             <p style="margin-left:40px;"><img src="../images/polly_benchmark.png" width="600" height="150"/></p>
           <li><p>Implement co-simulator(our name:Csim) for a few Marvell's ARM based cpu.</p></li>
-          <li><p>Apply compiler code generation idea to propose a solution and Csim team adopted it. <a href="http://jonathan2251.github.io/ws/en/RL_Marvell.pdf"> reference</a></p></li>
+          <li><p>Apply compiler code generation idea to propose a solution and Csim team adopted it.</p></li>
             <p style="margin-left:25px;">
               <a id="hint_spec" style="color:red" title="">ARM spec</a>
               <a> &rarr; </a>
