--- a/ch1/cv_cschen.html
+++ b/ch1/cv_cschen.html
@@ -173,6 +173,19 @@ canvas {
         <h1>工作貢獻</h1>
       </div>
       <div class="sectionTitle">
+        <h1>Hisilcon</h1>
+      </div>
+      
+      <div class="sectionContent">
+        <article>
+          <li><p>獨立完成80% texture相關的API與optimization (frontend + llvm backend)以及其他的工作. </p></li>
+          </p></li>
+        </article>
+      </div>
+
+      <div class="clear"></div>
+
+      <div class="sectionTitle">
         <h1>Marvell</h1>
       </div>
       
@@ -207,7 +220,7 @@ canvas {
                 <canvas id="canvas3" height="50"></canvas>
               </div>
               <script> drawCmakeSharedObjectBarChart(); </script>
-            <li style="margin-left:25px;"><p>cmake與ninja兩種編譯時效評估報告。</p></li>
+            <li style="margin-left:25px;"><p>cmake與ninja兩種編譯時效評估報告，消除某些主管認為ninja編譯時效較優的說法。</p></li>
         </article>
       </div>
       <div class="clear"></div>
