--- a/ch1/cv_cschen.html
+++ b/ch1/cv_cschen.html
@@ -179,7 +179,8 @@ canvas {
       <div class="sectionContent">
         <article>
           <p>獨立完成80% texture相關的API與optimization (frontend + llvm backend)以及其他的工作. </p>
-          </p>
+          <p><img src="../images/Hisilicon.png" width="100%" height="76"/></p>
+          <p>為支援自行設計的手機GPU, 移植ARM的code. 20%前端需修改, 50%後端需修改.</p>
         </article>
       </div>
 
