--- a/en/cv_cschen.html
+++ b/en/cv_cschen.html
@@ -181,6 +181,8 @@ canvas {
         <article>
           <p>Implement compiler (fontend + llvm backend) for 80% of texture related API and optimization by myself, and something else. </p>
           </p>
+          <p><img src="../images/Hisilicon.png" width="100%" height="76"/></p>
+          <p>To support an our new designed GPU for cell phone, ported from ARM. 20% of frontend is changed, 50% of backend is changed.</p>
         </article>
       </div>
 
