--- a/en/cv_cschen.html
+++ b/en/cv_cschen.html
@@ -237,7 +237,7 @@ canvas {
       
       <div class="sectionContent">
         <article>
-          <p>The upper half of the following figure is the work flow and software package of a computer program be generated and executed. IR stands for Intermediate Representation. 
+          <p>The upper half of the following figure is the work flow that software package of a computer program be generated and executed. IR stands for Intermediate Representation. 
           The lower half is the llvm's work flow. The yellow and green parts are implemented in my books (listed as my open source project above), Tutorial: Create an LLVM Backend compiler and Tutorial: Create an LLVM Backend toolchain respectively.</p>
           <p><img src="../images/mywork_1.png" width="100%" height="120"/></p>
         </article>
