correct typing error in resume

--- a/en/cv_cschen.html
+++ b/en/cv_cschen.html
@@ -195,8 +195,8 @@ canvas {
       <div class="sectionContent">
         <article>
           <p>Implement semi-auto software system of running benchmark and generating report for gcc toolchain. </p>
-            <p> style="margin-left:25px;"Purpose is to make sure the code change of gcc has no side effect in optimization
-              <a href="https://jonathan2251.github.io/ws/images/gcc-change-control.pdf"> (expain in flow chart)</a>.
+            <p style="margin-left:25px;">Purpose is to make sure the code change of gcc has no side effect in optimization
+              <a href="https://jonathan2251.github.io/ws/images/gcc-change-control.pdf"> (expain in flow chart)</a> </p>
             <p style="margin-left:25px;">Implemented bash script which can compare any two version of gcc toolchain and generate report. Similar as above.
             </p>
           <p>Introduce polly for Marvell llvm toolchain optimization. Polly is a software for loop optimization.</p>
