--- a/ch1/cv_cschen.html
+++ b/ch1/cv_cschen.html
@@ -178,7 +178,8 @@ canvas {
       
       <div class="sectionContent">
         <article>
-          <p>獨立完成80% texture相關的API與optimization (frontend + llvm backend)以及其他的工作. </p>
+          <p>獨立完成80% texture相關的API與optimization (frontend + llvm backend)與document撰寫。</p>
+          <p>獨立完成Code generation for load/store with RGBA fixed floating point format of vulkan (32, 16, 11, 10 and 2 bits and 2 bits; NaN Infinity transfer)與document撰寫。</p>
           <p><img src="../images/Hisilicon.png" width="100%" height="76"/></p>
           <p>為支援自行設計的手機GPU, 移植ARM的code. 20%前端需修改, 50%後端需修改.</p>
         </article>
