--- a/en/cv_cschen.html
+++ b/en/cv_cschen.html
@@ -179,8 +179,8 @@ canvas {
       
       <div class="sectionContent">
         <article>
-          <p>Implement compiler (fontend + llvm backend) for 80% of texture related API and optimization by myself, and something else. </p>
-          </p>
+          <p>Implement compiler (fontend + llvm backend) for 80% of texture related API and optimization by myself and document writing.</p>
+          <p>Code generation for load/store with RGBA fixed floating point format of vulkan (32, 16, 11, 10 and 2 bits; NaN Infinity transfer) alone and document writing.</p>
           <p><img src="../images/Hisilicon.png" width="100%" height="76"/></p>
           <p>To support an our new designed GPU for cell phone, ported from ARM. 20% of frontend is changed, 50% of backend is changed.</p>
         </article>
