The concept of GPU compiler

--- a/en/cv_cschen.html
+++ b/en/cv_cschen.html
@@ -80,6 +80,7 @@ canvas {
         <p style="font-size: 10px;">I am proud of my work is accepted by LLVM documentation, appears at <a href="http://llvm.org/docs/tutorial/#external-tutorials"> http://llvm.org/docs/tutorial/#external-tutorials</a></p>
         <p>Tutorial: Create an LLVM Backend compiler &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <a href="http://jonathan2251.github.io/lbd/index.html" target="_blank"><img style="vertical-align: middle;" src="../images/GitHub-Mark-32px.png" title="My github lbd" width="16" height="16" /> http://jonathan2251.github.io/lbd/index.html</a> </p>
         <p>Tutorial: Create an LLVM Backend Toolchain &nbsp;&nbsp;&nbsp;&nbsp; <a href="http://jonathan2251.github.io/lbt/index.html" target="_blank"><img style="vertical-align: middle;" src="../images/GitHub-Mark-32px.png" title="My github lbt" width="16" height="16" /> http://jonathan2251.github.io/lbt/index.html</a> </p>
+        <p>The concept of GPU compiler &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <a href="http://jonathan2251.github.io/lbd/gpu.html" target="_blank"><img style="vertical-align: middle;" src="../images/GitHub-Mark-32px.png" title="The concept of GPU compiler" width="16" height="16" /> http://jonathan2251.github.io/lbd/gpu.html</a> </p>
       </div>
       <div class="clear"></div>
     </section>
