--- a/ch1/resume_cschen.html
+++ b/ch1/resume_cschen.html
@@ -35,8 +35,8 @@ canvas {
     <div id="contactDetails">
       <ul>
         <p>陳鍾樞<br></p>
-        <p>我是位有經驗的軟體工程師，過去在工作中使用不同軟體語言、工具，來開發軟硬體產品，諸如：處理器，編譯器，模擬軟體 simulator，...，。 
-        對寫程式與debug懷抱熱情，暸解工具與軟體工程方法，並對撰寫文件以產生較有可讀性及可維護性的軟體感到快樂。</p>
+        <p>我是位有經驗的compiler開發者，開發過llvm cpu and gpu backend, lld linker, npu/onnx, c++, OpenGl/glsl compiler與simulator，...， 
+        對寫compiler感到快樂。</p>
       </ul>
     </div>
     <div class="clear"></div>
@@ -54,7 +54,7 @@ canvas {
         </div>
         
         <div class="sectionContent">
-          <p>二十年c/c++軟體開發經驗，七年編譯器相關工具開發經驗，碩士時研究平行處理。</p>
+          <p>二十年c/c++軟體開發經驗，八年編譯器相關工具開發經驗，碩士時研究平行處理。</p>
         </div>
       </article>
       <div class="clear"></div>
@@ -78,7 +78,8 @@ canvas {
       <div class="sectionContent">
         <p style="font-size: 0.7em;">很高興我的作品已被LLVM接受，出現在 <a href="http://llvm.org/docs/tutorial/#external-tutorials"> http://llvm.org/docs/tutorial/#external-tutorials</a></p>
         <p>如何建立LLVM後端編譯器 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <a href="http://jonathan2251.github.io/lbd/index.html" target="_blank"><img style="vertical-align: middle;" src="../images/GitHub-Mark-32px.png" title="My github lbd" width="16" height="16" /> http://jonathan2251.github.io/lbd/index.html</a> </p>
-        <p>如何建立LLVM後端系統工具 &nbsp;&nbsp;&nbsp;&nbsp; <a href="http://jonathan2251.github.io/lbt/index.html" target="_blank"><img style="vertical-align: middle;" src="../images/GitHub-Mark-32px.png" title="My github lbt" width="16" height="16" /> http://jonathan2251.github.io/lbt/index.html</a> </p>
+        <p>如何建立LLVM後端系統工具 &nbsp;&nbsp;&nbsp; <a href="http://jonathan2251.github.io/lbt/index.html" target="_blank"><img style="vertical-align: middle;" src="../images/GitHub-Mark-32px.png" title="My github lbt" width="16" height="16" /> http://jonathan2251.github.io/lbt/index.html</a> </p>
+        <p>GPU編譯器概念 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <a href="http://jonathan2251.github.io/lbd/gpu.html" target="_blank"><img style="vertical-align: middle;" src="../images/GitHub-Mark-32px.png" title="The concept of GPU compiler" width="16" height="16" /> http://jonathan2251.github.io/lbd/gpu.html</a> </p>
       </div>
       <div class="clear"></div>
     </section>
