--- a/en/resume_cschen.html
+++ b/en/resume_cschen.html
@@ -35,10 +35,8 @@ canvas {
     <div id="contactDetails">
       <ul>
         <p>Chung-Shu Chen 陳鍾樞<br></p>
-        <p>I am a programmer who used different computer languages, tools and computer related knowledge to develop 
-        different software and hardware products, such as CPU, compiler, simulator, ..., in my career. 
-        I have passion in programming and debugging, knowing tools and software engineering method well, feeling happy 
-        about writing good document to deliver more readable and maintainable software.</p>
+        <p>I am a compiler developer with good experience in llvm cpu and gpu backend, lld linker, npu/onnx, c++, OpenGl/glsl
+        and simulator, ..., and enjoy with compiler.</p>
       </ul>
     </div>
     <div class="clear"></div>
@@ -55,7 +53,7 @@ canvas {
         </div>
         
         <div class="sectionContent">
-          <p>Over 20 years experience in c/c++ programming, 7 years compiler toolchain related experience and research in parallel processing for master degree.</p>
+          <p>Over 20 years experience in c/c++ programming, 8 years compiler toolchain related experience and research in parallel processing for master degree.</p>
         </div>
       </article>
       <div class="clear"></div>
@@ -81,6 +79,7 @@ canvas {
         <p style="font-size: 0.7em;">I am proud of my work is accepted by LLVM documentation, appears at <a href="http://llvm.org/docs/tutorial/#external-tutorials"> http://llvm.org/docs/tutorial/#external-tutorials</a></p>
         <p>Tutorial: Create an LLVM Backend compiler &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <a href="http://jonathan2251.github.io/lbd/index.html" target="_blank"><img style="vertical-align: middle;" src="../images/GitHub-Mark-32px.png" title="My github lbd" width="16" height="16" /> http://jonathan2251.github.io/lbd/index.html</a> </p>
         <p>Tutorial: Create an LLVM Backend Toolchain &nbsp;&nbsp;&nbsp;&nbsp; <a href="http://jonathan2251.github.io/lbt/index.html" target="_blank"><img style="vertical-align: middle;" src="../images/GitHub-Mark-32px.png" title="My github lbt" width="16" height="16" /> http://jonathan2251.github.io/lbt/index.html</a> </p>
+        <p>The concept of GPU compiler &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <a href="http://jonathan2251.github.io/lbd/gpu.html" target="_blank"><img style="vertical-align: middle;" src="../images/GitHub-Mark-32px.png" title="The concept of GPU compiler" width="16" height="16" /> http://jonathan2251.github.io/lbd/gpu.html</a> </p>
       </div>
       <div class="clear"></div>
     </section>
