--- a/en/cv_cschen.html
+++ b/en/cv_cschen.html
@@ -115,7 +115,7 @@ canvas {
         <h1 class="instaFade delayOne">EXPERIENCE</h1>
       </div>
             
-      <div id="container"" style="solid #000000;">
+      <div id="container"" style="solid #000000;" class="instaFade delayOne">
         <canvas id="canvas2" width="800"></canvas>
       </div>
       <script>
